Issue 34812: Fix findbugs & checkstyle issues
Review by: jat



git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@5410 8db76d5a-ed1c-0410-87a9-c151d255dfc7