@@ -29,13 +29,13 @@ public final class Message3IntStringClass extends Message3 {
 
   public TreeLogger branch(TreeLogger logger, int x, String s, Class c,
       Throwable caught) {
-    Integer xi = new Integer(x);
+    Integer xi = Integer.valueOf(x);
     return branch3(logger, xi, s, c, getFormatter(xi), getFormatter(s),
         getFormatter(c), caught);
   }
 
   public void log(TreeLogger logger, int x, String s, Class c, Throwable caught) {
-    Integer xi = new Integer(x);
+    Integer xi = Integer.valueOf(x);
     log3(logger, xi, s, c, getFormatter(xi), getFormatter(s), getFormatter(c),
         caught);
   }
